database methods added

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -6,6 +6,8 @@ RUN apt-get update && apt-get install -y \
     gcc \
     make \
     libcjson-dev \
+    libsqlite3-dev \
+    sqlite3 \
     && rm -rf /var/lib/apt/lists/*
 
 # Çalışma dizinini oluştur
