--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -6,7 +6,10 @@ RUN apt-get update && apt-get install -y \
     gcc \
     make \
     libcjson-dev \
+    libsqlite3-dev \
+    sqlite3 \
     coreutils \
+    netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
 # Çalışma dizinini oluştur
@@ -18,11 +21,21 @@ COPY . .
 # Executable'ları derle
 RUN make directories && make encrypted-server
 
+# Database dizinini oluştur
+RUN mkdir -p /app/data
+
+# Database dosyası için volume
+VOLUME ["/app/data"]
+
 # Port'u expose et
 EXPOSE 8080
 
 # Unbuffered output için
 ENV TERM=xterm
 
-# Server'ı başlat
+# Healthcheck ekle - TCP port kontrol
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+    CMD nc -z localhost 8080 || exit 1
+
+# Server'ı başlat (database dosyasını data dizininde tutacak şekilde)
 CMD ["stdbuf", "-o0", "-e0", "./build/encrypted_server"]
