--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -9,6 +9,8 @@ RUN apt-get update && apt-get install -y \
     libsqlite3-dev \
     sqlite3 \
     libssl-dev \
+    libargon2-dev \
+    libjwt-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Çalışma dizinini oluştur
