--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -12,6 +12,8 @@ RUN apt-get update && apt-get install -y \
     procps \
     libssl-dev \
     netcat-openbsd \
+    libjwt-dev \
+    libargon2-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Çalışma dizinini oluştur
