client ui updated

--- a/qt_client/CMakeLists.txt
+++ b/qt_client/CMakeLists.txt
@@ -34,6 +34,8 @@ set(SOURCES
     mainwindow.cpp
     mapwidget.cpp
     client_wrapper.cpp
+    login_dialog.cpp
+    login_client.cpp
     ${C_SOURCES}
 )
 
